Make event nav look pretty on small screens. Fixes #185 (#254)

--- a/static/scss/custom.scss
+++ b/static/scss/custom.scss
@@ -75,6 +75,13 @@ a {
   // color: #000000;
   color: green;
   text-transform: uppercase;
+
+}
+
+.event-navigation-icon {
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #0082AB;
 }
 
 .navbar-light {
